# typescript-bazel-template

./: .bazelignore  .bazelrc  .commitlintrc.yaml  .eslintrc.js  .eslintrc.json  .eslintrc.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .prettierrc.yaml  BUILD.bazel  LICENSE  README.md  WORKSPACE  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json
tools/docker/: index.bzl  js_image_layer.bzl
tools/lint/: BUILD.bazel  eslint.bzl
tools/nodejs/: api.bzl  eslint.bzl  index.bzl  jest.bzl  lib.bzl  prettier.bzl  ts_project.bzl
