load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
    "tsconfig.eslint.json",
    "jest.config.ts",
    ".prettierrc.json",
    ".prettierignore",
    ".eslintrc.js",
    ".eslintignore",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)
